add chart api
